[metadata]
name = countland
version = 0.1.2
author = Samuel H. Church
author_email = samuelhchurch@gmail.com
description = tools for scRNA-seq analysis
long_description = A set of functions for applying a restricted linear algebra to the analysis of count-based data.
url = https://github.com/shchurch/countland
project_urls =
    Bug Tracker = https://github.com/shchurch/countland/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = .
packages = find:
python_requires = >=3.6

setup_requires =
    setuptools

install_requires =
    imgaug >=0.2.5  # Version specification for dependencies |||||| was <0.2.7
    matplotlib >=3.0.0
    numpy >=1.18   # Version specification for numba |||||| was <1.22
    pandas
    scanpy
    scipy >=1.7.3
    seaborn
    scikit-learn
    statsmodels

[options.extras_require]
dev =
    pytest
    black == 22.3.0
    flake8 == 4.0.1
    pre-commit == 2.17.0

[options.packages.find]
where = .

[aliases]
test = pytest [test]

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests
